force-app/main/default/objects/Product2/fields/Applicable_Product_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Product_Specifics__c</fullName>
    <description>Used for mapping T &amp; C with product master</description>
    <label>Applicable Product Specifics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Sales</fullName>
            </value>
            <value>
                <fullName>Fitout Material/Services</fullName>
            </value>
            <value>
                <fullName>Internet Bandwidth usage / usage-based Billing</fullName>
            </value>
            <value>
                <fullName>IT Management Services</fullName>
            </value>
            <value>
                <fullName>Power Utility Charges</fullName>
            </value>
            <value>
                <fullName>Pre-scheduled Tests / Activities related Services</fullName>
            </value>
            <value>
                <fullName>Temporary Storage in Service Provider Stores / Staging Area</fullName>
            </value>
            <value>
                <fullName>Third Party Cloud Services</fullName>
            </value>
            <value>
                <fullName>End User License Term</fullName>
            </value>
            <value>
                <fullName>Network Usage Validation Term</fullName>
            </value>
            <value>
                <fullName>YottaSafe Mega Savings Offer Term</fullName>
            </value>
            <value>
                <fullName>Infra Utility Charges per Circuit</fullName>
                <isActive>false</isActive>
                <label>Infra Utility Charges per Circuit</label>
            </value>
            <value>
                <fullName>Inframanage/Inframonitor Services</fullName>
                <isActive>false</isActive>
                <label>Inframanage/Inframonitor Services</label>
            </value>
            <value>
                <fullName>Migration Services and Charges</fullName>
                <isActive>false</isActive>
                <label>Migration Services and Charges</label>
            </value>
            <value>
                <fullName>No transfer of Equipment Ownership</fullName>
                <isActive>false</isActive>
                <label>No transfer of Equipment Ownership</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>