force-app/main/default/objects/Product2/fields/Burstable_Limit__c.field-meta.xml
<CustomField>
    <fullName>Burstable_Limit__c</fullName>
    <label>Burstable Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>