force-app/main/default/objects/Product2/fields/Burstable_Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>Burstable_Plan_Value__c</fullName>
    <label>Burstable Plan Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>