force-app/main/default/objects/Product2/fields/CI_Mapping_Required__c.field-meta.xml
<CustomField>
    <fullName>CI_Mapping_Required__c</fullName>
    <label>CI Mapping Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>