force-app/main/default/objects/Product2/fields/Delivery_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time_Days__c</fullName>
    <label>Delivery Time (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>