force-app/main/default/objects/Product2/fields/EULA_Required__c.field-meta.xml
<CustomField>
    <fullName>EULA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EULA Required?</label>
    <type>Checkbox</type>
</CustomField>