force-app/main/default/objects/Product2/fields/HSN_SAC_Code__c.field-meta.xml
<CustomField>
    <fullName>HSN_SAC_Code__c</fullName>
    <label>HSN / SAC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>