force-app/main/default/objects/Product2/fields/IPC_Partner_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>IPC_Partner_Commission_Percent__c</fullName>
    <label>IPC Partner Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>