force-app/main/default/objects/Product2/fields/Is_Ready_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_Integration__c</fullName>
    <formula>IsActive</formula>
    <label>Is Ready for Integration</label>
    <type>Checkbox</type>
</CustomField>