force-app/main/default/objects/Product2/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>