force-app/main/default/objects/Product2/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN12</fullName>
                <label>YIS NM1 - Data Center</label>
            </value>
            <value>
                <fullName>Customer Site</fullName>
            </value>
            <value>
                <fullName>IN14</fullName>
                <label>YIS AP1 - Data Center</label>
            </value>
            <value>
                <fullName>IN15</fullName>
                <label>YIS KA1 - Data Center</label>
            </value>
            <value>
                <fullName>IN11</fullName>
                <label>Mumbai Region</label>
            </value>
            <value>
                <fullName>IN16</fullName>
                <label>YIS TB1 - Data Center</label>
            </value>
            <value>
                <fullName>IN18</fullName>
                <label>YIS D1 - Data Center</label>
            </value>
            <value>
                <fullName>IN19</fullName>
                <label>YIS AS1 - Office</label>
            </value>
            <value>
                <fullName>I101</fullName>
                <label>YIS TN1 - Data Center</label>
            </value>
            <value>
                <fullName>I102</fullName>
                <label>YIS TB2 - Data Center</label>
            </value>
            <value>
                <fullName>IN26</fullName>
                <label>YIS G1 - Office</label>
            </value>
            <value>
                <fullName>IN29</fullName>
                <label>YIS TS - Office</label>
            </value>
            <value>
                <fullName>DEL</fullName>
                <isActive>false</isActive>
                <label>DEL</label>
            </value>
            <value>
                <fullName>IN13</fullName>
                <isActive>false</isActive>
                <label>Navi Mumbai – DC2</label>
            </value>
            <value>
                <fullName>IN22</fullName>
                <isActive>false</isActive>
                <label>YNS AP1 - Data Center</label>
            </value>
            <value>
                <fullName>IN25</fullName>
                <isActive>false</isActive>
                <label>YNS D1 - Data Center</label>
            </value>
            <value>
                <fullName>IN23</fullName>
                <isActive>false</isActive>
                <label>YNS KA1 - Data Center</label>
            </value>
            <value>
                <fullName>IN21</fullName>
                <isActive>false</isActive>
                <label>YNS Mumbai – HO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>