force-app/main/default/objects/Product2/fields/Minimum_Contract_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Contract_Period_Months__c</fullName>
    <label>Minimum Contract Period (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>