force-app/main/default/objects/Product2/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <inlineHelpText>Quantity will be in multiple of this number</inlineHelpText>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>