force-app/main/default/objects/Product2/fields/Partner_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission_Percent__c</fullName>
    <label>Partner Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>