force-app/main/default/objects/Product2/fields/Product_18_charId__c.field-meta.xml
<CustomField>
    <fullName>Product_18_charId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product 18 charId</label>
    <type>Text</type>
</CustomField>