force-app/main/default/objects/Product2/fields/Product_BU__c.field-meta.xml
<CustomField>
    <fullName>Product_BU__c</fullName>
    <label>Product BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU_Wise_Requirement</valueSetName>
    </valueSet>
</CustomField>