force-app/main/default/objects/Product2/fields/Product_Code_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Auto_Number__c</fullName>
    <displayFormat>P{000000}</displayFormat>
    <label>Product Code (Auto Number)</label>
    <type>AutoNumber</type>
</CustomField>