force-app/main/default/objects/Product2/fields/Product_Family_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Text__c</fullName>
    <description>Created By Nandish to be used in Contract Integration</description>
    <formula>CASE(TEXT( Family ), &apos;10&apos;,&apos;Colocation&apos;,
                     &apos;12&apos;,&apos;Network &amp; Connectivity&apos;,
                     &apos;13&apos;,&apos;Cyber Security&apos;,
                     &apos;14&apos;,&apos;Yotta Cloud&apos;,
                     &apos;16&apos;,&apos;Federated Cloud&apos;,
                     &apos;17&apos;,&apos;IT Management&apos;,
                     &apos;18&apos;, &apos;Traded Goods&apos;,
                     &apos;Ad-hoc&apos;,&apos;Ad-hoc&apos;, &apos;&apos;)</formula>
    <label>Product Family Text</label>
    <type>Text</type>
</CustomField>