force-app/main/default/objects/Product2/fields/Product_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Full_Name__c</fullName>
    <formula>TEXT(Family) + &quot; - &quot; +  TEXT(Product_Line__c)  + &quot; - &quot; +   Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Full Name</label>
    <type>Text</type>
</CustomField>