force-app/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>13400</fullName>
                <label>Application Security</label>
            </value>
            <value>
                <fullName>Backup and Recovery</fullName>
                <isActive>false</isActive>
                <label>Backup and Recovery</label>
            </value>
            <value>
                <fullName>14300</fullName>
                <label>Backup and Recovery as a Service</label>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
                <isActive>false</isActive>
                <label>Cloud Connect</label>
            </value>
            <value>
                <fullName>13500</fullName>
                <label>Cloud Security</label>
            </value>
            <value>
                <fullName>10200</fullName>
                <label>Colocation Support</label>
            </value>
            <value>
                <fullName>Colo Services</fullName>
                <isActive>false</isActive>
                <label>Colo Services</label>
            </value>
            <value>
                <fullName>Compute</fullName>
                <isActive>false</isActive>
                <label>Compute</label>
            </value>
            <value>
                <fullName>14100</fullName>
                <label>Compute as a service</label>
            </value>
            <value>
                <fullName>13100</fullName>
                <label>Data Security</label>
            </value>
            <value>
                <fullName>DC Build</fullName>
                <isActive>false</isActive>
                <label>DC Build</label>
            </value>
            <value>
                <fullName>10300</fullName>
                <label>Dedicated Building Colocation</label>
            </value>
            <value>
                <fullName>14400</fullName>
                <label>Disaster Recovery As A Service</label>
            </value>
            <value>
                <fullName>16100</fullName>
                <label>Federated Cloud</label>
            </value>
            <value>
                <fullName>12100</fullName>
                <label>Hosted Network Services</label>
            </value>
            <value>
                <fullName>Infra Management</fullName>
                <isActive>false</isActive>
                <label>Infra Management</label>
            </value>
            <value>
                <fullName>13300</fullName>
                <label>Infra Security</label>
            </value>
            <value>
                <fullName>Internet Bandwidth</fullName>
                <isActive>false</isActive>
                <label>Internet Bandwidth</label>
            </value>
            <value>
                <fullName>17200</fullName>
                <label>IT Administration</label>
            </value>
            <value>
                <fullName>17100</fullName>
                <label>IT Monitoring</label>
            </value>
            <value>
                <fullName>17300</fullName>
                <label>IT Professional</label>
            </value>
            <value>
                <fullName>Managed Network</fullName>
                <isActive>false</isActive>
                <label>Managed Network</label>
            </value>
            <value>
                <fullName>12200</fullName>
                <label>Managed WAN Services</label>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
                <isActive>false</isActive>
                <label>Miscellaneous</label>
            </value>
            <value>
                <fullName>10100</fullName>
                <label>Multitenant Colocation</label>
            </value>
            <value>
                <fullName>Multitenat Colocation</fullName>
                <isActive>false</isActive>
                <label>Multitenat Colocation</label>
            </value>
            <value>
                <fullName>14600</fullName>
                <label>Platform As A Service</label>
            </value>
            <value>
                <fullName>14700</fullName>
                <label>Private Cloud</label>
            </value>
            <value>
                <fullName>13200</fullName>
                <label>Professional Security</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>