force-app/main/default/objects/Product2/fields/Product_line_for_PL__c.field-meta.xml
<CustomField>
    <fullName>Product_line_for_PL__c</fullName>
    <label>Product line for PL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Backup_Recovery_Archival_Service</fullName>
                <label>Backup, Recovery and Archival Service</label>
            </value>
            <value>
                <fullName>Bank in BOX</fullName>
            </value>
            <value>
                <fullName>DC Build</fullName>
            </value>
            <value>
                <fullName>Federated Cloud</fullName>
            </value>
            <value>
                <fullName>Firewall &amp; UTM As A Service</fullName>
            </value>
            <value>
                <fullName>Global Cloud Konnect</fullName>
            </value>
            <value>
                <fullName>GWS</fullName>
            </value>
            <value>
                <fullName>Hosted Internet Bandwidth</fullName>
            </value>
            <value>
                <fullName>HPC</fullName>
            </value>
            <value>
                <fullName>IBM Compute</fullName>
            </value>
            <value>
                <fullName>In-Building Ducting (IBD)</fullName>
            </value>
            <value>
                <fullName>Internet Leased Line</fullName>
            </value>
            <value>
                <fullName>IP Address</fullName>
            </value>
            <value>
                <fullName>IPLC</fullName>
            </value>
            <value>
                <fullName>IT Administration</fullName>
            </value>
            <value>
                <fullName>IT Monitoring</fullName>
            </value>
            <value>
                <fullName>IT Professional</fullName>
            </value>
            <value>
                <fullName>ITSM As A Service</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Load Balancer As A Service</fullName>
            </value>
            <value>
                <fullName>Managed DDOS</fullName>
            </value>
            <value>
                <fullName>Managed IDPS</fullName>
            </value>
            <value>
                <fullName>Managed WAF</fullName>
            </value>
            <value>
                <fullName>Nutanix VM</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Private Cloud - Backup</fullName>
            </value>
            <value>
                <fullName>PRIVATE CLOUD - COMPUTE</fullName>
                <label>Private Cloud - Compute</label>
            </value>
            <value>
                <fullName>PRIVATE CLOUD - NETWORK</fullName>
                <label>Private Cloud - Network</label>
            </value>
            <value>
                <fullName>PRIVATE CLOUD - SECURITY</fullName>
                <label>Private Cloud - Security</label>
            </value>
            <value>
                <fullName>PRIVATE CLOUD - SOFTWARE</fullName>
                <label>Private Cloud - Software</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>