force-app/main/default/objects/Product2/fields/Quantity_Based_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Based_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Based Discount</label>
    <type>Checkbox</type>
</CustomField>