force-app/main/default/objects/Product2/fields/Restrict_Contract_Generation__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Contract_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Contract Generation</label>
    <type>Checkbox</type>
</CustomField>