force-app/main/default/objects/Product2/fields/Sale_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type_Label__c</fullName>
    <description>Created by Nandish for Sale Type Text in Integration</description>
    <formula>CASE(
TEXT( Sale_Type__c ), 
&apos;ZTAD&apos;, &apos;Sale of Service&apos;, 
&apos;ZTAN&apos;, &apos;Sale of Equipment&apos;,
&apos;&apos;)</formula>
    <inlineHelpText>DO NOT INCLUDE IN LAYOUT</inlineHelpText>
    <label>Sale Type Label</label>
    <type>Text</type>
</CustomField>