force-app/main/default/objects/Product2/fields/SAP_Product__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (SAP Product)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>